--- a/templates/Base.html
+++ b/templates/Base.html
@@ -27,7 +27,7 @@
                         <h1 class="site-name">Organick</h1>
                     </a>
                     <div class="text-nav-box menu__list">
-                        <a href="{{ url_for('home') }}" class="text-nav">Home</a>
+                        <a href="{{ url_for('main') }}" class="text-nav">Home</a>
                         <a href="{{ url_for('about') }}" class="text-nav">About</a>
                         <!-- select box -->
                         <div class="select-box">
@@ -56,7 +56,7 @@
                 </div>
             </nav>
             <div class="text-nav-box-mobile menu__list">
-                <a href="{{ url_for('home') }}" class="text-nav">Home</a>
+                <a href="{{ url_for('main') }}" class="text-nav">Home</a>
                 <a href="{{ url_for('about') }}" class="text-nav">About</a>
                 <!-- select box -->
                 <div class="select-box"  id="pages-selector">
@@ -159,3 +159,6 @@
     </footer>
 </body>
 </html>
+
+<!-- macros  section -->
+
