--- a/templates/Organick.html
+++ b/templates/Organick.html
@@ -55,32 +55,34 @@
                     Accredited Farmers
                 </h1>
                 <p class="page-2-p">
-                    Simply dummy text of the printing and typesetting industry. Lorem had ceased to <br>
-                    been the industry's standard dummy text ever since the 1500s, when an unknown <br>
+                    Simply dummy text of the printing and typesetting industry. Lorem had ceased to 
+                    been the industry's standard dummy text ever since the 1500s, when an unknown
                     printer took a galley.
                 </p>
-                <div class="page-2-inner">
-                    <div class="page-2-icon-box">
-                        <img src="{{ url_for('static', filename='img/main/page-2-1.png') }}" alt="">
+                <div class="page-2-inner-container">
+                    <div class="page-2-inner">
+                        <div class="page-2-icon-box">
+                            <img src="{{ url_for('static', filename='img/main/page-2-1.png') }}" alt="">
+                        </div>
+                        <div class="page-2-inner-box">
+                            <h1 class="page-2-h1-small">Organic Foods Only</h1>
+                            <p class="page-2-p">
+                                Simply dummy text of the printing and typesetting <br>
+                                industry. Lorem Ipsum
+                            </p>
+                        </div>
                     </div>
-                    <div class="page-2-inner-box">
-                        <h1 class="page-2-h1-small">Organic Foods Only</h1>
-                        <p class="page-2-p">
-                            Simply dummy text of the printing and typesetting <br>
-                            industry. Lorem Ipsum
-                        </p>
-                    </div>
-                </div>
-                <div class="page-2-inner">
-                    <div class="page-2-icon-box">
-                        <img src="{{ url_for('static', filename='img/main/page-2-2.png') }}" alt="">
-                    </div>
-                    <div class="page-2-inner-box">
-                        <h1 class="page-2-h1-small">Quality Standards</h1>
-                        <p class="page-2-p">
-                            Simply dummy text of the printing and typesetting <br>
-                            industry. Lorem Ipsum
-                        </p>
+                    <div class="page-2-inner">
+                        <div class="page-2-icon-box">
+                            <img src="{{ url_for('static', filename='img/main/page-2-2.png') }}" alt="">
+                        </div>
+                        <div class="page-2-inner-box">
+                            <h1 class="page-2-h1-small">Quality Standards</h1>
+                            <p class="page-2-p">
+                                Simply dummy text of the printing and typesetting <br>
+                                industry. Lorem Ipsum
+                            </p>
+                        </div>
                     </div>
                 </div>
                 <button type="button" class="page-2-button">Shop Now <img src="{{ url_for('static', filename='img/main/aerrow.png') }}" alt="" class="page-2-aerrow"></button>
@@ -271,7 +273,7 @@
                 <h1 class="page-4-title">What Our Customer Saying?</h1>
                 <div class="page-4-box-container">
                     <div class="page-4-box">
-                        <img src="{{ url_for('static', filename='img/main/page-4-customer-img.jpg') }}" alt="" class="page-4-customer-img">
+                        <div class="page-4-box-img-box"><img src="{{ url_for('static', filename='img/main/page-4-customer-img.jpg') }}" alt="" class="page-4-customer-img"></div>
                         <div class="page-4-star-box">
                             <div class="page-4-star"><img src="{{ url_for('static', filename='img/main/page-4-golden-star.png') }}" alt=""></div>
                             <div class="page-4-star"><img src="{{ url_for('static', filename='img/main/page-4-golden-star.png') }}" alt=""></div>
@@ -286,7 +288,7 @@
                         </div>
                     </div>
                     <div class="page-4-box page-4-selected-box">
-                        <img src="{{ url_for('static', filename='img/main/page-4-customer-img.jpg') }}" alt="" class="page-4-customer-img">
+                        <div class="page-4-box-img-box"><img src="{{ url_for('static', filename='img/main/page-4-customer-img.jpg') }}" alt="" class="page-4-customer-img"></div>
                         <div class="page-4-star-box">
                             <div class="page-4-star"><img src="{{ url_for('static', filename='img/main/page-4-golden-star.png') }}" alt=""></div>
                             <div class="page-4-star"><img src="{{ url_for('static', filename='img/main/page-4-golden-star.png') }}" alt=""></div>
@@ -301,7 +303,7 @@
                         </div>
                     </div>
                     <div class="page-4-box">
-                        <img src="{{ url_for('static', filename='img/main/page-4-customer-img.jpg') }}" alt="" class="page-4-customer-img">
+                        <div class="page-4-box-img-box"><img src="{{ url_for('static', filename='img/main/page-4-customer-img.jpg') }}" alt="" class="page-4-customer-img"></div>
                         <div class="page-4-star-box">
                             <div class="page-4-star"><img src="{{ url_for('static', filename='img/main/page-4-golden-star.png') }}" alt=""></div>
                             <div class="page-4-star"><img src="{{ url_for('static', filename='img/main/page-4-golden-star.png') }}" alt=""></div>
