--- a/templates/password.html
+++ b/templates/password.html
@@ -2,22 +2,20 @@
 {% block header_container %}
 {{ super() }}
 <div class="header-container-password">
-    <div class="image-pasword">
-
-    </div>
+    <h1 class="password-header-h1">Protected Page</h1>
     <div class="content-pasword">
         <div class="pasword-content">
             <div class="imgage-fon">
-                <img src="img/protected.svg" alt="">
+                <img src="{{ url_for('static', filename='img/password/protected.svg') }}" alt="">
             </div>
             <div class="text1">
                 <h3>Password</h3>
-                <form action="" class="form">
+                <form action="" class="password-form">
                     <input type="password" placeholder="Enter Your Password">
+                    <button class="pasword">
+                        Send Now <img src="{{ url_for('static', filename='img/main/aerrow.png') }}" alt="">
+                    </button>
                 </form>
-                <button class="pasword">
-                    Send Now <img src="img/arrow.svg" alt="">
-                </button>
             </div>
         </div>
     </div>
