--- a/css/about_us_style.css
+++ b/css/about_us_style.css
@@ -941,6 +941,12 @@ footer a:hover {
 
 /* responsiveness part */
 
+@media (max-width: 1199.98px) {
+}
+@media (max-width: 991.98px) {
+}
+@media (max-width: 767.98px) {
+}
 
 
 @media (max-width: 1394px) {
@@ -1039,8 +1045,7 @@ footer a:hover {
         min-height: 140vh;
         background-color: var(--clr-white-gray);
     }
-    .hamid-veg-background>.my-container {
-        /* padding-top: 25vh; */
+    .hamid-veg-background>.hamid-my-container {
         height: auto;
     }
     .hamid-decide {
