--- a/css/style.css
+++ b/css/style.css
@@ -258,6 +258,26 @@ footer a:hover {
 
 /* baner style start */
 
+#hamid-casual-button{
+    display: flex;
+    width: min(14vw, 225px);
+    height: min(80px, 4vw);
+    justify-content: center;
+    align-items: center;
+    gap: 5%;
+    border-radius: .9vw;
+    background: #274C5B;
+    color: #FFF;
+    font-family: var(--ff-roboto);
+    font-size: min(20px, 1.5vw);
+    font-style: normal;
+    font-weight: 700;
+    line-height: normal;
+}
+
+#hamid-casual-button:hover {
+    box-shadow: 2px 2px 5px 3px rgba(0, 0, 0, 0.25);
+}
 .hamid-header-container {
     width: 100%;
     background-color: #fff;
@@ -305,6 +325,7 @@ footer a:hover {
 
 .hamid-plate-box {
     padding-top: 4%;
+    padding-bottom: 5vh;
     display: flex;
     width: 100%;
 
@@ -419,6 +440,7 @@ footer a:hover {
     align-items: center;
     width: 100%;
     min-height: 140vh;
+    padding-bottom: 10vh;
     background-color: var(--clr-white-gray);
 }
 .hamid-veg-background>.my-container {
@@ -452,6 +474,7 @@ footer a:hover {
 }
 
 .hamid-decide-span {
+    font-size: min(20px, 1.5vw);
     margin-top: 5%;
     gap: 3%;
     display: flex;
@@ -464,11 +487,9 @@ footer a:hover {
 
 }
 .hamid-decide-span>span{
-
     white-space: nowrap;
     color: #274C5B;
     font-family: Roboto;
-    font-size: (20px);
     font-style: normal;
     font-weight: 500;
     line-height: normal; 
@@ -507,7 +528,7 @@ footer a:hover {
     align-items: center;
     justify-content: center;
     border-radius: 10%;
-    min-height: 100%;
+    height: 100%;
     background-color: #fff;
 
 }
@@ -1816,3 +1837,281 @@ footer a:hover {
 }
 
 /**************************************************************************************************/
+@media (max-width: 1394px) {
+    .hamid-offers-content{
+        padding-top: 20px;
+    }
+    .hamid-offers-grid-box {
+        grid-template-columns: 320px 320px;
+        justify-content: center;
+        min-height: 750px;
+
+    }
+}
+
+@media (max-width: 1199.98px) {
+    .hamid-my-container {
+        width: 80%;
+    }
+
+
+    .hamid-plate-box {
+        padding-top: 0%;
+        display: flex;
+        flex-direction: column;
+        width: 100%;
+        align-items: center;
+    
+    }
+    
+
+    .hamid-plate-img>img {
+        width: 120%;
+        height: auto;
+        left: -20%;
+    }
+    
+    .hamid-plate-txt {
+        text-align: center;
+        margin-top: 0%;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        height: 100%;
+        max-width: 100%;
+    }
+
+
+    .hamid-hamid-offers,
+    .hamid-experts,
+    .hamid-veg-background,
+    .hamid-my-container {
+        margin-left: auto;
+        margin-right: auto;
+        margin-top: 0;
+    }
+
+    .hamid-icon-section {
+        margin-top: 5%;
+        display: flex;
+    }
+    .hamid-tractor-part {
+        gap: 2%;
+        display: flex;
+    }
+    
+    .hamid-tractor-part>span{
+        width: 80%;
+    }
+    
+    .hamid-chemic-part {
+        display: flex;
+        gap: 2%;
+    }
+    
+    .hamid-chemic-part>span {
+        margin-left: auto;
+        width: 80%;
+    }
+    
+    .hamid-plate-txt>button{
+        position: relative;
+        top: -15px;
+        margin-left: auto;
+        margin-right: auto;
+        scale: 1.5;
+        margin-top: 10%;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        gap: 5%;
+    }
+
+    .hamid-plate-box{
+            padding-bottom: 5vh;
+    }
+
+    .hamid-experts{
+        margin: 10vh 0;
+    }
+}
+@media (max-width: 991.98px) {
+    .hamid-my-container {
+        width: 85%;
+    }
+    .hamid-veg-background{
+        display: flex;
+        align-items: center;
+        width: 100%;
+        min-height: 140vh;
+        background-color: var(--clr-white-gray);
+        padding-bottom: 50vh;
+    }
+
+    .hamid-veg-background>.hamid-my-container {
+        height: auto;
+    }
+    .hamid-decide {
+        padding-top: 7vh;
+        width: 100%;
+        display: flex;
+        flex-direction: column;
+        /* min-height: 50vh; */
+    
+    }
+    
+
+    .hamid-decide-text {
+        text-align: center;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        width: 100%;
+        height: 100%;
+    }
+
+    .hamid-decide-img {
+        margin-top: 10vh;
+        margin-left: auto;
+        margin-right: auto;
+        width: 70%;
+    
+    }
+    .hamid-decide-img>img {
+        margin-left: 0;
+    }
+
+    .hamid-decide-container-small {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        max-width: 75%;
+    
+    }
+    .hamid-decide-span{
+        font-size: 25px;
+    }
+
+    .hamid-p-last-child {
+        margin: 3.5vw 0 0vw 0;
+        text-align: left;
+        border-left: solid 5px var(--clr-green);
+        margin-left: 0;
+        padding-left: 2vw;
+    }
+
+    .hamid-veg-grid-container {
+        margin: 10vh auto;
+        width: 80%;
+        background-color: var(--clr-white-gray);
+        min-height: 30vh;
+    }
+
+    .hamid-veg-grid-box{
+        justify-content: center;
+        height: 100%;
+        display: grid;
+        grid-template-columns: 50% 50%;
+        column-gap: 3%;
+        row-gap: 10%;
+    }
+
+    .hamid-veg-grid-box div {
+        padding: 5% 10%;
+        display: flex;
+        flex-direction: column;
+        text-align: center;
+        align-items: center;
+        justify-content: center;
+        border-radius: 2.5vw;
+        height: 100%;
+        background-color: #fff;
+    
+    }
+    .hamid-experts-grid {
+        grid-template-columns: 40% 40%;
+        justify-content: center;
+        padding-bottom: 20px;
+    }
+}  
+
+
+@media (max-width: 767.98px) {
+    .hamid-plate-img{
+        left: -12%;
+    }
+    .hamid-plate-img>img{
+        width: 160%;
+    }
+    #hamid-casual-button {
+        width: 120px;
+        font-size: 10px;
+        height: 30px;
+    }
+
+    .hamid-veg-background{
+        padding-bottom: 156vh;
+    }
+    
+    .hamid-decide-span{
+        font-size: max(15px, 2vw);
+    }
+    .hamid-offers-box {
+        min-width: 240px;
+        height: 300px;
+    }
+    .hamid-offers-content{
+        margin: 10vh 0; 
+    }
+    .hamid-offers-grid-box {
+        grid-template-columns: 240px;
+        min-height: 1300px;
+        gap: 1.5%;
+    }
+
+
+    .hamid-experts{
+        min-height: 200vh;
+    }
+
+    .hamid-experts-grid {
+        grid-template-columns: 255px;
+        justify-content: center;
+        padding: 20px 0;
+    }
+    .hamid-expert-box{
+        min-height: 65vh;
+    }
+
+    .hamid-veg-grid-box {
+        justify-content: center;
+        height: 100%;
+        display: grid;
+        grid-template-columns: 255px;
+        grid-template-rows: 250px 250px 250px 250px ;
+        gap: 20px;
+    }
+    .hamid-icon-section{
+        display: flex;
+        flex-direction: column;
+        gap: 5vw
+    }
+
+    .hamid-decide-container-small{
+        max-width: 100%;
+    }
+
+    .hamid-decide-img{
+        margin: 20% auto 10%;
+    }
+    .hamid-decide-img>img{
+        scale: 1.2;
+    }
+    .hamid-icon-section span{
+        font-size: min(25px, 4vw);
+    }
+
+    .hamid-big-p {
+        font-size: min(8vw, 50px); 
+    }
+}
