--- a/portfolio-stand-ind.css
+++ b/portfolio-stand-ind.css
@@ -1,6 +1,6 @@
-/* START OF OUR-TEAM PAGE */
+/* START OF PORTFOLIO PAGE */
 
-.hamid1-header-container {
+.hamid2-header-container {
     width: 100%;
     background-color: var(--clr-white-green);
     height: auto;
@@ -11,7 +11,7 @@
 
 /* baner style start */
 
-.hamid1-head-baner {
+.hamid2-head-baner {
     display: flex;
     justify-content: center;
     align-items: center;
@@ -19,18 +19,18 @@
     width: 100%;
     position: relative;
 }
-.hamid1-head-img {
+.hamid2-head-img {
     height: auto;
     width: 100%;
 }
 
-.hamid1-head-img2 {
+.hamid2-head-img2 {
     position: absolute;
     width: 100%;
     height: auto;
     z-index: 1;
 }
-.hamid1-head-text {
+.hamid2-head-text {
     position: absolute;
     z-index: 2;
     color: #274C5B;
@@ -46,15 +46,15 @@
 
 
 /* main start */
-.hamid1-experts h5 {
+.hamid2-experts h5 {
     color: #274C5B;
     font-family: Roboto;
-    font-size: 25px;
+    font-size: min(25px, 2vw);
     font-style: normal;
     font-weight: 800;
     line-height: normal;
 }
-.hamid1-big-p {
+.hamid2-big-p {
     color: var(--clr-blue);
     font-family: Roboto;
     font-size: min(50px, 12vw);
@@ -63,7 +63,7 @@
     line-height: normal;
 }
 
-.hamid1-small-p {
+.hamid2-small-p {
     margin-top: 2%;
     color: #525C60;
     font-family: Open Sans;
@@ -72,7 +72,7 @@
     font-weight: 400;
     line-height: 165.4%; /* 29.772px */
 }
-.hamid1-experts h3 {
+.hamid2-experts h3 {
     color: var(--clr-green);
     font-family: Yellowtail;
     font-size: min(9vw, 36px);
@@ -81,67 +81,67 @@
     line-height: normal;
 }
 
-.hamid1-my-container {
+.hamid2-my-container {
     width: 70%;
     margin: 0 auto;
 }
-.hamid1-experts>.hamid1-my-container{
+.hamid2-experts>.hamid2-my-container{
     background-color: #fff;
     text-align: center;
 }
 
-.hamid1-experts {
-    margin-top: 7vw;
+.hamid2-experts {
+    margin-top: 4vw;
     min-height: 120vh;
     background-color: #fff;
     display: flex;
     align-items: center;
 }
-.hamid1-experts>.hamid1-my-container{
+.hamid2-experts>.hamid2-my-container{
     background-color: #fff;
     text-align: center;
 }
 
-.hamid1-experts-text {
+.hamid2-experts-text {
     background-color: #fff;
     width: 60%;
     margin: 0 auto;
 }
 
-.hamid1-experts-grid {
+.hamid2-experts-grid {
     margin: 3% 0;
     display: grid;
     grid-template-columns: 32% 32% 32%;
-    gap: 2%;
+    column-gap: 2%;
 }
 
-.hamid1-expert-box {
+.hamid2-expert-box {
     position: relative;
     display: flex;
     flex-direction: column;
     align-items: start;
-    min-height: 55vh;
-    background-color: var(--clr-white-gray);
+    min-height: 50vh;
+    background-color: #fff;
     border-radius: 5%;
     transition: 250ms ease all;
 }
 
-.hamid1-expert-box>img {
+.hamid2-expert-box>img {
     object-fit: contain;
-    border-radius: 5% 5% 0 0;
+    border-radius: 5%;
     width: 100%;
 
 }
 
-.hamid1-expert-box h3 {
+.hamid2-expert-box h3 {
     text-align: left;
     font-size: 22px;
 }
 
-.hamid1-experts-desc {
-    padding: 5% 0 5% 7%;
+.hamid2-experts-desc {
+    padding: 5% 0 5% 0;
 }
-.hamid1-expert-socials{
+.hamid2-expert-socials{
     position: absolute;
     bottom: 4%;
     right: 9%;
@@ -149,55 +149,50 @@
     white-space: nowrap;
 }
 
-.hamid1-expert-socials a {
+.hamid2-expert-socials a {
     margin-right: 10%;
 }
 
 
-.hamid1-expert-socials a img {
+.hamid2-expert-socials a img {
     scale: 0.85;
 }
 
-.hamid1-expert-box:hover{
-    background-color: #fff;
-    box-shadow: 0px 10px 100px 2px rgba(0, 0, 0, 0.25);
-}
+
 /* end of experts section */
 
 
-/* END OF OUR TEAM PAGE */
+/* main end */
 
 
+/* END OF PORTFOLIO PAGE */
 
 
 @media (max-width: 1199.98px) {
     /* there is nothing */
 }
 @media (max-width: 991.98px) {
-    .hamid1-experts-grid {
-        grid-template-columns: 47% 47%;
-        column-gap: 6%;
-        
+    .hamid2-experts-grid{
+        grid-template-columns: 45% 45%;
+        column-gap: 10%;
+
     }
-    .hamid1-my-container{
+
+    .hamid2-my-container {
         width: 80%;
     }
 }
 @media (max-width: 767.98px) {
-    .hamid1-big-p{
-        font-size: min(50px, 8vw);
-    }
-    
-    .hamid1-experts-grid {
-        justify-content: center;
-        grid-template-columns: 250px;
-        margin-bottom: 27vh;
+    .hamid2-head-text {
+        background-color:#fffdfdb9;
     }
 
-    .hamid1-experts-text{
-        width: 100%;
+    .hamid2-experts-grid {
+        grid-template-columns: 250px;
+        justify-content: center;
+        row-gap: 5vh;
     }
-    .hamid1-small-p{
-        margin-bottom: 6vh;
+    .hamid2-experts-desc h5{
+        font-size: 20px;
     }
 }
